syntax = "proto3";
package cosmos.crypto.sr25519;

import "gogoproto/gogo.proto";

option go_package                       = "github.com/cosmos/cosmos-sdk/crypto/keys/sr25519";
option (gogoproto.messagename_all)      = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_getters_all)  = false;

// PubKey defines a secp256r1 ECDSA public key.
message PubKey {
    option (gogoproto.goproto_stringer) = false;

    bytes key = 1 [(gogoproto.casttype) = "github.com/tendermint/tendermint/crypto/sr25519.PubKey"];
}
